--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -5,9 +5,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1 th:text="${msg}"></h1>
+    <h1 th:text="Project Start"></h1>
     <p>테스트요</p>
-    
-    <a href="pay/order">장바구니</a>
 </body>
 </html>
